--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "zendframework/zendframework": "2.2.*",
         "doctrine/doctrine-module": "0.8.x-dev",
         "doctrine/doctrine-orm-module": "dev-master",
+        "hounddog/doctrine-data-fixture-module": "dev-master",
         "zendframework/zftool": "dev-master"
     }
 }
